Minor bug fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_js_shadcn_javascript_app",
+  "name": "assignment-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
